# producer-consumer-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: producer_consumer.h
src/: main.cpp  producer_consumer.cpp
tests/: test_main.cpp
